@@ -1,6 +1,6 @@
 #! /bin/sh
 # texi2dvi --- produce DVI (or PDF) files from Texinfo (or (La)TeX) sources.
-# $Id: texi2dvi,v 1.35.2.1 2007-06-26 22:17:34 karl Exp $
+# $Id: texi2dvi,v 1.35.2.2 2007-06-27 17:02:28 karl Exp $
 #
 # Copyright (C) 1992, 1993, 1994, 1995, 1996, 1997, 1998, 1999, 2001,
 # 2002, 2003, 2004, 2005, 2006, 2007 Free Software Foundation, Inc.
@@ -35,16 +35,15 @@ unset RUNNING_KSH
 set -e
 
 # This string is expanded by rcs automatically when this file is checked out.
-rcs_revision='$Revision: 1.35.2.1 $'
+rcs_revision='$Revision: 1.35.2.2 $'
 rcs_version=`set - $rcs_revision; echo $2`
 program=`echo $0 | sed -e 's!.*/!!'`
-version="texi2dvi (GNU Texinfo 4.8) $rcs_version
+version="texi2dvi (GNU Texinfo 4.9) $rcs_version
 
 Copyright (C) 2007 Free Software Foundation, Inc.
-There is NO warranty; not even for MERCHANTABILITY or FITNESS FOR A
-PARTICULAR PURPOSE.  You may redistribute copies of GNU texinfo
-under the terms of the GNU General Public License.
-For more information about these matters, see the file named COPYING.
+License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>
+This is free software: you are free to change and redistribute it.
+There is NO WARRANTY, to the extent permitted by law.
 "
 
 build_mode=${TEXI2DVI_BUILD_MODE:-local}
